package main.java.implemetations;

public interface Device {
    double getScreeenWidth();

    double getScreeenHeigth();

    void play(String size);

}