package main.java.products;

public interface ContentCard {

    void selectOption();

    void generateCards();

}
