package main.java.products;

public interface MainMenu {

    void generateOptionList();

    void selectOption();

}
