package main.java.products;

public interface Player {

    void generatePlayer();

    void generateSubtitles();

}
