package main.java.products.disney;

import main.java.products.MainMenu;

public class DisneyMainMenu implements MainMenu {

    public DisneyMainMenu() {
        System.out.println("create Main Menu Disney");
    }

    @Override
    public void generateOptionList() {
        throw new UnsupportedOperationException("Unimplemented method 'generateOptionList'");
    }

    @Override
    public void selectOption() {
        throw new UnsupportedOperationException("Unimplemented method 'selectOption'");
    }

}
