package main.java.products.netflix;

import main.java.products.ContentCard;

public class NetflixContentCard implements ContentCard {

    @Override
    public void selectOption() {
        throw new UnsupportedOperationException("Unimplemented method 'selectOption'");
    }

    @Override
    public void generateCards() {
        throw new UnsupportedOperationException("Unimplemented method 'generateCards'");
    }

}
