package main.java.products.netflix;

import main.java.products.MainMenu;

public class NetflixMainMenu implements MainMenu {

    @Override
    public void generateOptionList() {
        throw new UnsupportedOperationException("Unimplemented method 'generateOptionList'");
    }

    @Override
    public void selectOption() {
        throw new UnsupportedOperationException("Unimplemented method 'selectOption'");
    }

}
