package main.java.products.netflix;

import main.java.products.Player;

public class NetflixPlayer implements Player {

    @Override
    public void generatePlayer() {
        throw new UnsupportedOperationException("Unimplemented method 'generatePlayer'");
    }

    @Override
    public void generateSubtitles() {
        throw new UnsupportedOperationException("Unimplemented method 'generateSubtitles'");
    }

}
